# sixteen-voices

./: .gitignore  Makefile  README.md  linkedin_article.md  linkedin_post.md  poster.tex  presentation.tex  pyproject.toml  requirements.txt
.streamlit/: config.toml
article_figures/: diagrams_en.tex
data/: get_author_datasets.py  get_books.py  gutenberg.py
demos/: app_attention.py  app_explainer.py  app_features.py  app_interpolate.py  app_poster.py  app_poster_all.py  app_poster_blend.py  app_poster_steer.py  app_poster_v2.py  app_presentation.py  app_steer.py  app_transplant.py  app_weight_steer.py  probe_keep_only.py  probe_kill_control.py  probe_poe_poet.py  probe_poster_robustness.py
docs/: ANTHROPIC_EMOTIONS_SUMMARY.md  ARTICLE.md  ARTICLE_SAE.md  ARTICLE_SHORT.md  ARTICLE_SIMPLE.md  AUTHORS.md  FAQ.md  FEATURE_CATALOG.md  LINKEDIN.md  LINKEDIN_SAE.md  METHODOLOGY_POSTER.md  METHODOLOGY_SAE.md  MONOSEMANTICITY_AUDIT.md  PODCAST.md  POSTER.md  POSTER_ABSTRACT.md  POSTER_FAQ.md  POSTER_GUIDE.md  POSTER_PLAN.md  REFERENCES.md  RESIDUAL_STREAM.md  SAE_EXPLAINER.md  SUMMARY.md  TECHNICAL.md  TECHNICAL_REPORT_SAE.md  TODO.md  WHAT_IS_STEERING.md
outputs/: knockout_all_heads.json
scripts/: adapter_pca.py  analyze_h14_grounding.py  analyze_head_profiles.py  analyze_heads_deep.py  analyze_lora_amplification.py  analyze_sae.py  analyze_sae_features.py  analyze_sae_features_v2.py  analyze_semantic_tokens.py  analyze_structural_semantic.py  attention_stability.py  classify_sae_features.py  eval_adapters.py  extract_prose_texts.py  fig_architecture.py  fig_knockout.py  (+96 more)
(+181 files in other folders)
